# squirrel-datasets-core

./: .coveragerc  .dockerignore  .flake8  .flake8_nb  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLA.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  renovate.json  requirements.dev.in  requirements.doc.in  requirements.in  requirements.preprocessing.in  requirements.torchvision.in  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cla.yml
docs/: add_dataset.rst  code_of_conduct.rst  conf.py  contribute.rst  driver_integration.rst  index.rst
docs/code/: all_drivers.py  install.sh  real_scenario.py
docs/dataset_links/: adult.rst  allenai_c4.rst  automl.rst  bdd100k.rst  california_housing.rst  camvid.rst  cc100.rst  conceptual_captions.rst  datascience_bowl.rst  fem_simulations.rst  imagenet.rst  kaggle_casting_quality.rst  monthly_german_tweets.rst
docs/source/: add_dataset.rst  code_of_conduct.rst  conf.py  contribute.rst  index.rst
docs/source/dataset_links/: adult.rst  allenai_c4.rst  automl.rst  bdd100k.rst  camvid.rst  cc100.rst  conceptual_captions.rst  datascience_bowl.rst  imagenet.rst  (+2 more)
examples/: 01.Getting_Started.ipynb  02.Catalog.ipynb  03.Pytorch_Model_Training.ipynb  04.PytorchLightning_Model_Training.ipynb  05.Plugins.ipynb  05.XGBoost.ipynb  06.Plugins.ipynb  06.SquirrelStore_with_Spark.ipynb  07.Performance_Guideline.ipynb  07.SquirrelStore_with_Spark.ipynb  08.Performance_Guideline.ipynb  08.Spark_Preprocessing.ipynb  09.Spark_Preprocessing.ipynb  10.DALI_Squirrel_Integration.py  10.Distributed_MNIST.py  11.DALI_Squirrel_Integration.py  11.Split_Data_Into_Different_Stores.ipynb  11.TimeSeries_With_Spark_and_Squirrel.ipynb  12.Split_Data_Into_Different_Stores.ipynb  SquirrelStore_with_Spark&Dask.ipynb  test_notebook.ipynb
infrastructure/docker/: Dockerfile
signatures/version1/: cla.json
squirrel_datasets_core/driver/: __init__.py  hub.py  torchvision.py
squirrel_datasets_core/io/: io.py
squirrel_datasets_core/preprocessing/: save_shards.py
squirrel_datasets_core/spark/: __init__.py
src/: test.ipynb
src/squirrel_datasets_core/: __init__.py  parse_dataset_cards.py  squirrel_plugin.py
test/: conftest.py  test_integration_squirrel_datasets.py
test/test_datasets/: mock_utils.py  test_activeloop.py  test_allenai.py  test_bdd100k.py  test_camvid.py  test_cc100.py  test_conceptual_captions.py  test_ds_bowl.py  test_hub.py  test_huggingface.py  test_imagenet.py  test_kaggle_casting_quality.py  test_monthly_german_tweets.py  test_sklearn_ds.py  test_torchvision.py
(+72 files in other folders)
